# prui

./: .env-example  .gitignore  Cargo.toml  README.md
src/: db.rs  handlers.rs  main.rs
