[package]
name = "prui"
version = "0.1.0"
authors = ["Valeriy Kostikov <mkoctuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2"
actix-web = "1.0"
chrono = "0.4"
dotenv = "0.14"
futures = "0.1"
postgres = { version = "0.15", features = ["with-chrono"] }
r2d2 = "0.8"
r2d2_postgres = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"